---
source: lambc_parse/src/parse.rs
expression: parser.parse_import()
---
Ok(
    Import {
        file: StrLit {
            text: Some(
                StrText {
                    inner: "my-path",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 6,
                        end: 13,
                    },
                },
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 5,
                end: 14,
            },
        },
        name: Some(
            Ident {
                raw: "alias",
                span: Span {
                    file: FileId(
                        0,
                    ),
                    start: 18,
                    end: 23,
                },
            },
        ),
        items: [
            ImportItem {
                item: Ident {
                    raw: "one",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 32,
                        end: 35,
                    },
                },
                alias: Some(
                    Ident {
                        raw: "i1",
                        span: Span {
                            file: FileId(
                                0,
                            ),
                            start: 39,
                            end: 41,
                        },
                    },
                ),
                span: Span {
                    file: FileId(
                        0,
                    ),
                    start: 39,
                    end: 41,
                },
            },
            ImportItem {
                item: Ident {
                    raw: "two",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 43,
                        end: 46,
                    },
                },
                alias: Some(
                    Ident {
                        raw: "i2",
                        span: Span {
                            file: FileId(
                                0,
                            ),
                            start: 50,
                            end: 52,
                        },
                    },
                ),
                span: Span {
                    file: FileId(
                        0,
                    ),
                    start: 50,
                    end: 52,
                },
            },
            ImportItem {
                item: Ident {
                    raw: "three",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 54,
                        end: 59,
                    },
                },
                alias: None,
                span: Span {
                    file: FileId(
                        0,
                    ),
                    start: 54,
                    end: 59,
                },
            },
        ],
        star: false,
        span: Span {
            file: FileId(
                0,
            ),
            start: 0,
            end: 61,
        },
    },
)
